# orville-write

./: .gitignore  CHANGES  INSTALLATION  Makefile  Makefile.in  README  amin.1  amin.c  config.cache  config.h  config.h.in  config.status  configure  configure.in  getutent.c  getutent.h  helpers.1  helpers.c  huh.1  huh.c  lib_common.c  lib_common.h  mesg.1  mesg.c  orville.conf  orville.h  run-configure  say  write.1  write.h  wrt_him.c  wrt_hist.c  wrt_main.c  wrt_me.c  wrt_opt.c  wrt_sig.c  wrt_tty.c  wrt_type.c  wrttab  wrttmp.h  (+1 more)
